# 2023-gsoc-zephyr-application

./: .gitignore  CMakeLists.txt  Kconfig  README.md
doc/: wireshark_capture.pcapng
src/: app_socket.c  app_socket.h  http_server.c  socket_dumb_http.c
